--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,19 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   background: $background-gradient-dark;
+  font-family: 'PT Mono', monospace;
+  line-height: 1.7;
+  color: #162127;
+  box-sizing: border-box;
 }
