Defined colour variables, implemented BEM methodology for the header and started to write basic header styles with Sass nesting

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,10 @@
+// COLOURS
+$color-grey: #f2f2f2;
+$color-yellow: #ffd866;
+$color-blue: #91f2df;
+$color-black: #162127;
+
+// BACKGROUND
 $background-gradient-dark: linear-gradient(
   287.77deg,
   #162127 13.16%,
