--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,34 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
+.header {
+  padding: 3rem 6rem;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__logo-box {
+  display: flex;
+  align-items: center;
+}
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+.header__a {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  color: #f2f2f2;
+  border-bottom: 4px solid transparent;
+  padding-bottom: 0.2rem;
+  transition: all 0.3s ease-in;
+  margin-left: 30px;
+}
+
 /*# sourceMappingURL=style.css.map */
