--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-grey: #f2f2f2;
 $color-yellow: #ffd866;
 $color-blue: #91f2df;
 $color-black: #162127;
+$color-red: #d9584a;
 
 // BACKGROUND
 $background-gradient-dark: linear-gradient(
