--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 3rem 6rem;
-  background: transparent;
+  background: $background-gradient-dark;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,9 +20,19 @@
     font-weight: 700;
     font-size: 2rem;
     color: $color-grey;
-    border-bottom: 4px solid transparent;
+    border-bottom: 0.3rem solid transparent;
     padding-bottom: 0.2rem;
     transition: all 0.3s ease-in;
-    margin-left: 30px;
+    margin-left: 3rem;
+
+    &:hover {
+      color: $color-yellow;
+      border-color: $color-yellow;
+    }
+  }
+
+  &__a[data-selected] {
+    color: $color-yellow;
+    border-bottom: 0.3rem solid $color-yellow;
   }
 }
