--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,76 @@ body {
   font-weight: 300;
 }
 
+.btn {
+  width: 16rem;
+  height: 5rem;
+  text-align: center;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  cursor: pointer;
+  border-radius: 0;
+  border: none;
+}
+.btn--blue {
+  background-color: #91f2df;
+  border: solid 0.3rem #91f2df;
+  padding: 0.3rem;
+  margin-right: 2rem;
+  box-shadow: inset 0 5rem 0 0 #91f2df;
+  transition: ease-in-out 0.4s;
+}
+.btn--blue:hover {
+  box-shadow: none;
+  color: #fff;
+  border: solid 0.3rem #91f2df;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 0 #91f2df;
+}
+.btn--ghost-blue {
+  background-color: transparent;
+  border: solid 0.3rem #91f2df;
+  padding: 0.3rem;
+  color: #fff;
+  box-shadow: inset 0 0 0 0 #91f2df;
+  transition: ease-in-out 0.4s;
+}
+.btn--ghost-blue:hover {
+  box-shadow: inset 0 5rem 0 0 #91f2df;
+  color: #162127;
+  border: solid 0.3rem #91f2df;
+}
+.btn--yellow {
+  background-color: #ffd866;
+  border: solid 0.3rem #ffd866;
+  padding: 0.3rem;
+  margin-right: 2rem;
+  box-shadow: inset 0 5rem 0 0 #ffd866;
+  transition: ease-in-out 0.4s;
+}
+.btn--yellow:hover {
+  box-shadow: none;
+  border: solid 0.3rem #ffd866;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 0 #ffd866;
+}
+.btn--black {
+  background-color: #162127;
+  border: solid 0.3rem #162127;
+  padding: 0.3rem;
+  color: #ffd866;
+  margin-right: 2rem;
+  box-shadow: inset 0 5rem 0 0 #162127;
+  transition: ease-in-out 0.4s;
+}
+.btn--black:hover {
+  box-shadow: none;
+  border: solid 0.3rem #162127;
+  color: #162127;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 0 #162127;
+}
+
 .header {
   padding: 3rem 6rem;
   background: linear-gradient(287.77deg, #162127 13.16%, #152a35 72.99%);
@@ -119,6 +189,7 @@ body {
 .hero__title {
   position: relative;
   z-index: 3;
+  text-shadow: 0.2rem 0.6rem 0.4rem rgba(0, 0, 0, 0.25);
 }
 .hero__left {
   display: flex;
