--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,6 +10,7 @@
   &__title {
     position: relative;
     z-index: 3;
+    text-shadow: 0.2rem 0.6rem 0.4rem rgba(0, 0, 0, 0.25);
   }
 
   &__left {
@@ -29,7 +30,6 @@
       z-index: 1;
       margin: -2.5rem -1.8rem;
       position: relative;
-
       z-index: 1;
     }
   }
