--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -45,7 +45,7 @@
     background-color: $color-yellow;
     border: solid 0.3rem $color-yellow;
     padding: 0.3rem;
-    margin-right: 2rem;
+    margin: 0.5rem;
     box-shadow: inset 0 5rem 0 0 $color-yellow;
     transition: ease-in-out 0.4s;
 
@@ -62,7 +62,7 @@
     border: solid 0.3rem $color-black;
     padding: 0.3rem;
     color: $color-yellow;
-    margin-right: 2rem;
+    margin: 0.5rem;
     box-shadow: inset 0 5rem 0 0 $color-black;
     transition: ease-in-out 0.4s;
 
@@ -73,5 +73,10 @@
       background-color: transparent;
       box-shadow: inset 0 0 0 0 $color-black;
     }
+  }
+
+  &--small {
+    width: 12rem;
+    height: 4.2rem;
   }
 }
