--- a/sass/layout/_elements.scss
+++ b/sass/layout/_elements.scss
@@ -1,9 +1,49 @@
-// .background {
-//   background-color: $color-grey;
-//   margin: 6rem;
-// }
+.section {
+  &__background {
+    margin: 4rem;
+    background-color: $color-grey;
+    display: flex;
+    justify-content: center;
+  }
 
-// .container {
-//   margin: 6rem 14rem;
-//   max-width: 116rem;
-// }
+  &__container {
+    max-width: 132rem;
+    width: 100%;
+    padding-bottom: 6rem;
+  }
+}
+
+.section-title {
+  transform: translateY(-40%);
+  text-align: center;
+
+  &__heading {
+    color: $color-black;
+  }
+}
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.portfolio-item {
+  padding: 2rem;
+  margin: 3rem 1.5rem;
+  flex: 1;
+  // width: 40rem;
+  background-color: #fff;
+  text-align: center;
+  box-shadow: 0.1rem 0.7rem 1rem 0.4rem rgba(0, 0, 0, 0.08);
+
+  &__description {
+    margin-bottom: 2rem;
+  }
+
+  &__button-box {
+    display: flex;
+    justify-content: center;
+  }
+}
