--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,10 @@
     align-items: center;
   }
 
+  &__logo {
+    max-width: 15rem;
+  }
+
   &__nav {
     display: flex;
     align-items: center;
