--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,13 +2,20 @@ h1,
 h2,
 h3 {
   font-family: 'Work Sans', sans-serif;
-  font-weight: 800;
   color: $color-yellow;
+  font-weight: 800;
 }
 
 h1,
 h2 {
   font-size: 3.6rem;
+  font-weight: 800;
+}
+
+h3 {
+  color: $color-black;
+
+  font-size: 2.2rem;
 }
 
 body {
