--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'base/typography';
 
 @import 'components/buttons';
+@import 'components/portfolio';
 
 @import 'layout/elements';
 @import 'layout/header';
