--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $color-grey: #f2f2f2;
 $color-yellow: #ffd866;
 $color-blue: #91f2df;
+$color-light-blue: #effbf8;
 $color-black: #162127;
 $color-red: #d9584a;
 
