--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import 'components/buttons';
 @import 'components/portfolio';
+@import 'components/contact-form';
 
 @import 'layout/elements';
 @import 'layout/header';
