--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -35,6 +35,7 @@
 
   &__image {
     width: 100%;
+    display: block;
   }
 
   &__label {
@@ -42,11 +43,11 @@
     display: inline-block;
     padding: 0.2rem 0.4rem;
     font-size: 1.4rem;
-    transform: translateY(-70%);
+    transform: translateY(-50%);
   }
 
   &__title {
-    margin-top: -1.5rem;
+    margin-top: -0.5rem;
   }
 
   &__sub-title {
