--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -7,7 +7,7 @@
   margin-top: 6rem;
   display: grid;
   gap: 2rem;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 36rem));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 36rem));
   justify-content: center;
 }
 
