--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-blue: #91f2df;
 $color-light-blue: #effbf8;
 $color-black: #162127;
 $color-red: #d9584a;
+$color-light-red: #e99085;
 
 // BACKGROUND
 $background-gradient-dark: linear-gradient(
