--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'components/buttons';
 @import 'components/portfolio';
 @import 'components/contact-form';
+@import 'components/image-block';
 
 @import 'layout/elements';
 @import 'layout/header';
