--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,20 +1,27 @@
 .about {
+  margin: 6rem 0;
+
   &__row {
     display: flex;
     flex-wrap: wrap;
+    padding: 0 3rem;
   }
 
   &__double-column {
     display: flex;
     flex-direction: column;
-    flex: 2;
-    background-color: $color-red;
+    flex: 1.5;
   }
 
   &__column {
     display: flex;
     flex-direction: column;
     flex: 1;
-    background-color: $color-blue;
+  }
+}
+
+.about-item {
+  &__text {
+    font-size: 1.5rem;
   }
 }
