--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $color-light-blue: #effbf8;
 $color-black: #162127;
 $color-red: #d9584a;
 $color-light-red: #e99085;
+$color-light-blue: rgba(145, 242, 223, 0.4);
+$color-light-yellow: rgba(255, 216, 102, 0.6);
 
 // BACKGROUND
 $background-gradient-dark: linear-gradient(
