--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -4,19 +4,31 @@
   &__row {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 3rem;
+    padding: 0 4rem;
+
+    &--alternate {
+      margin: 8rem 0;
+    }
   }
 
   &__double-column {
     display: flex;
     flex-direction: column;
-    flex: 1.5;
+    flex-basis: 60%;
+
+    &--alternate {
+      padding-right: 2rem;
+    }
   }
 
   &__column {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex-basis: 40%;
+
+    &--alternate {
+      text-align: right;
+    }
   }
 }
 
