--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'components/portfolio';
 @import 'components/contact-form';
 @import 'components/image-block';
+@import 'components/mobile-menu';
 
 @import 'layout/elements';
 @import 'layout/header';
