--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -24,6 +24,11 @@
     flex-basis: 30%;
   }
 
+  &__github-logo,
+  &__linkedin-logo {
+    max-width: 4.2rem;
+  }
+
   &__contact {
     color: $color-grey;
   }
