--- a/src/sass/layout/_elements.scss
+++ b/src/sass/layout/_elements.scss
@@ -8,13 +8,23 @@
   }
 
   &__background {
-    margin: 4rem;
+    margin: 4rem 4rem 5rem 4rem;
     background-color: $color-grey;
     display: flex;
     justify-content: center;
-
     min-height: 75vh;
-    // padding-bottom: 10.8rem;
+
+    @include respond(large-phone) {
+      margin: 3rem 3rem 4rem 3rem;
+    }
+
+    @include respond(phone) {
+      margin: 2rem 2rem 3rem 2rem;
+    }
+
+    @include respond(small-phone) {
+      margin: 1rem 1rem 0 1rem;
+    }
   }
 
   &__container {
@@ -27,6 +37,10 @@
 .section-title {
   transform: translateY(-40%);
   text-align: center;
+
+  @include respond(phone) {
+    transform: none;
+  }
 
   &__heading {
     color: $color-black;
