--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,6 +5,14 @@
   align-items: center;
   justify-content: space-between;
 
+  @include respond(large-phone) {
+    padding: 3rem 3rem;
+  }
+
+  @include respond(phone) {
+    padding: 3rem 2rem;
+  }
+
   &__logo-box {
     display: flex;
     align-items: center;
@@ -12,6 +20,10 @@
 
   &__logo {
     max-width: 15rem;
+
+    @include respond(small-phone) {
+      max-width: 14rem;
+    }
   }
 
   &__nav {
