--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,14 +1,14 @@
 .hero {
   background: $background-gradient-dark;
-  max-height: 800px;
+  // max-height: 800px;
   overflow: hidden;
-  position: relative;
+  // position: relative;
 
   &__container {
     padding-top: 2rem;
     display: flex;
     justify-content: space-between;
-    padding: 2rem 4rem 0 6rem;
+    padding: 2rem 4rem 0 4rem;
     max-width: 132rem;
     margin: 0 auto;
   }
@@ -61,7 +61,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 2rem 0 3rem 0;
+  padding: 3rem 3rem 0 3rem;
 
   &__text {
     font-size: 1.6rem;
