continued to add responsive styling on pages and sections

--- a/src/sass/components/_image-block.scss
+++ b/src/sass/components/_image-block.scss
@@ -12,9 +12,21 @@
       transform: translate(-2rem, 2rem);
     }
 
+    @include respond(tablet) {
+      &:hover {
+        transform: none;
+      }
+    }
+
     &--alternate {
       &:hover {
         transform: translate(2rem, 2rem);
+      }
+
+      @include respond(tablet) {
+        &:hover {
+          transform: none;
+        }
       }
     }
   }
