--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -8,6 +8,8 @@
   cursor: pointer;
   border-radius: 0;
   border: none;
+  color: $color-black;
+  padding: 1.5rem 4rem;
 
   &__link {
     color: $color-black;
@@ -16,7 +18,6 @@
   &--blue {
     background-color: $color-blue;
     border: solid 0.3rem $color-blue;
-    padding: 0.3rem;
     margin-right: 2rem;
     box-shadow: inset 0 5rem 0 0 $color-blue;
     transition: ease-in-out 0.4s;
@@ -33,10 +34,10 @@
   &--ghost-blue {
     background-color: transparent;
     border: solid 0.3rem $color-blue;
-    padding: 0.3rem;
-    color: #fff;
+    color: $color-grey;
     box-shadow: inset 0 0 0 0 $color-blue;
     transition: ease-in-out 0.4s;
+    padding: 1.5rem 4.8rem;
 
     &:hover {
       box-shadow: inset 0 5rem 0 0 $color-blue;
