--- a/src/sass/layout/_elements.scss
+++ b/src/sass/layout/_elements.scss
@@ -19,18 +19,18 @@
     }
 
     @include respond(phone) {
-      margin: 2rem 2rem 3rem 2rem;
+      margin: 2rem;
     }
 
     @include respond(small-phone) {
-      margin: 1rem 1rem 0 1rem;
+      margin: 1rem 1rem -1rem 1rem;
     }
   }
 
   &__container {
     max-width: 132rem;
     width: 100%;
-    padding-bottom: 12rem;
+    padding-bottom: 2rem;
   }
 }
 
