--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -6,8 +6,18 @@
     flex-wrap: wrap;
     padding: 0 4rem;
 
+    @include respond(large-phone) {
+      flex-direction: column;
+      padding: 0 2rem;
+    }
+
     &--alternate {
       margin: 12rem 0;
+
+      @include respond(large-phone) {
+        margin: 6rem 0;
+        flex-direction: column-reverse;
+      }
     }
   }
 
