--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -6,11 +6,43 @@
 
   70% {
     transform: scale(1);
-    box-shadow: 0 0 0 20px rgba(235, 87, 70, 0);
+    box-shadow: 0 0 0 2rem rgba(235, 87, 70, 0);
   }
 
   100% {
     transform: scale(0.9);
     box-shadow: 0 0 0 0 rgba(235, 87, 70, 0);
+  }
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+
+  70% {
+    transform: translateX(1rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+
+  70% {
+    transform: translateX(-1rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
