--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,8 +1,44 @@
+.animated-circle {
+  width: 3.2rem;
+  height: 3.2rem;
+  border-radius: 5rem;
+  background-color: $color-red;
+  box-shadow: 0 0 0 0 rgb(235, 87, 70);
+  transform: scale(1);
+  animation: pulse 3s infinite;
+  z-index: 1;
+  margin: -2.5rem -1.8rem;
+  position: relative;
+  z-index: 1;
+}
+
+.semi-circle {
+  display: none;
+
+  @include respond(large-phone) {
+    display: block;
+    transform: translate(-4rem, 0rem);
+    position: relative;
+    z-index: 1;
+  }
+
+  @include respond(phone) {
+    transform: translate(-4rem, 0rem);
+  }
+}
+
 .hero {
   background: $background-gradient-dark;
-  // max-height: 800px;
   overflow: hidden;
-  // position: relative;
+
+  @include respond(large-phone) {
+    height: 60rem;
+  }
+
+  &__title-container {
+    position: relative;
+    z-index: 4;
+  }
 
   &__container {
     padding-top: 2rem;
@@ -11,6 +47,16 @@
     padding: 2rem 4rem 0 4rem;
     max-width: 132rem;
     margin: 0 auto;
+
+    @include respond(large-phone) {
+      display: block;
+      padding: 4rem;
+    }
+
+    @include respond(small-phone) {
+      display: block;
+      padding: 4rem 2rem 2rem 2rem;
+    }
   }
 
   &__title {
@@ -18,6 +64,10 @@
     z-index: 3;
     text-shadow: 0.2rem 0.6rem 0.4rem rgba(0, 0, 0, 0.25);
     margin-bottom: 2rem;
+
+    @include respond(small-phone) {
+      font-size: 6vw;
+    }
   }
 
   &__left {
@@ -25,25 +75,33 @@
     flex-direction: column;
     padding-top: 6rem;
     max-width: 70rem;
+    animation-name: moveInLeft;
+    animation-duration: 2s;
 
-    &::before {
-      content: '';
-      width: 3.2rem;
-      height: 3.2rem;
-      border-radius: 5rem;
-      background-color: $color-red;
-      box-shadow: 0 0 0 0 rgb(235, 87, 70);
-      transform: scale(1);
-      animation: pulse 3s infinite;
-      z-index: 1;
-      margin: -2.5rem -1.8rem;
+    @include respond(large-phone) {
+      max-width: none;
+      text-align: center;
+      align-items: center;
+    }
+
+    @include respond(phone) {
       position: relative;
-      z-index: 1;
+      z-index: 10;
+    }
+
+    @include respond(small-phone) {
+      padding-top: 4rem;
     }
   }
 
   &__img {
     max-width: 45rem;
+    animation-name: moveInRight;
+    animation-duration: 2s;
+
+    @include respond(large-phone) {
+      display: none;
+    }
   }
 
   &__text {
@@ -53,7 +111,7 @@
   }
 
   &__button-box {
-    margin-top: 2rem;
+    display: flex;
   }
 }
 
