--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
 
-    @include respond(phone) {
+    @include respond(tablet) {
       display: none;
     }
   }
