--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -29,6 +29,15 @@
       background-color: transparent;
       box-shadow: inset 0 0 0 0 $color-blue;
     }
+
+    @include respond(tablet) {
+      &:hover {
+        box-shadow: inset 0 5rem 0 0 $color-blue;
+        color: $color-black;
+        border: solid 0.3rem $color-blue;
+        background-color: $color-blue;
+      }
+    }
   }
 
   &--ghost-blue {
@@ -43,6 +52,14 @@
       box-shadow: inset 0 5rem 0 0 $color-blue;
       color: $color-black;
       border: solid 0.3rem $color-blue;
+    }
+
+    @include respond(tablet) {
+      &:hover {
+        box-shadow: inset 0 0 0 0 $color-blue;
+        color: $color-grey;
+        border: solid 0.3rem $color-blue;
+      }
     }
   }
 
@@ -59,6 +76,14 @@
       border: solid 0.3rem $color-yellow;
       background-color: transparent;
       box-shadow: inset 0 0 0 0 $color-yellow;
+    }
+
+    @include respond(tablet) {
+      &:hover {
+        box-shadow: inset 0 5rem 0 0 $color-yellow;
+        color: $color-black;
+        border: solid 0.3rem $color-yellow;
+      }
     }
   }
 
@@ -77,6 +102,17 @@
       color: $color-black;
       background-color: transparent;
       box-shadow: inset 0 0 0 0 $color-black;
+    }
+
+    @include respond(tablet) {
+      &:hover {
+        background-color: $color-black;
+        border: solid 0.3rem $color-black;
+
+        color: $color-yellow;
+
+        box-shadow: inset 0 5rem 0 0 $color-black;
+      }
     }
   }
 
