--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -14,6 +14,12 @@
     box-shadow: 0.1rem 0.7rem 1rem 0.4rem rgba(0, 0, 0, 0.08);
   }
 
+  @include respond(tablet) {
+    &:hover {
+      box-shadow: none;
+    }
+  }
+
   &__outer {
     background-color: #fff;
     text-align: center;
