--- a/src/sass/pages/_skills.scss
+++ b/src/sass/pages/_skills.scss
@@ -16,4 +16,12 @@
       transform: scale(1.1);
     }
   }
+
+  &__title {
+    margin-top: 1rem;
+  }
+
+  &__img {
+    max-width: 10rem;
+  }
 }
